resources/assets/style.css
@font-face {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 100 900;
    src: url('inter-variable.woff2') format('woff2');
    font-display: swap;
}

:root {
    /*--color: rgba(0, 0, 0, 0.8);*/
    --color: #303031;
    --bg: #eff1f5;
    /*--primary: #40a02b;*/
    --primary: #277F09;
    /*--secondary: #09a4e5;*/
    --secondary: #0573B5;
}

@media (prefers-color-scheme: dark) {
    :root {
        --color: rgba(255, 255, 255, 0.75);
        --bg: #1e1e2e;
        --primary: #a6e3a1;
        --secondary: #89b4fb;
    }
}

* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
}

body {
    font: 300 normal 1.0em/1.6 'Inter', sans-serif;
    text-align: center;
    text-rendering: geometricPrecision;
    color: var(--color);
    background-color: var(--bg);
}

a {
    font-weight: 500;
}

.container {
    max-width: 780px;
    margin: 0 auto;
    padding: 2em;
}

.nowrap {
    white-space: nowrap;
}

.hidden {
    display: none !important;
}

@media screen and (min-width: 1200px) {
    body.home {
        zoom: 125%;
    }
}

/* header */

header h1, header h2, header .code {
    line-height: 1.1em;
}

header {
    margin-top: 2em;
}

header a {
    color: inherit;
    text-decoration: none;
    border-bottom: solid 1px inherit;
}

header a:hover {
    text-decoration: underline;
    text-decoration-thickness: 3px;
}

.home header {
    margin-top: 5em;
}

header div.code {
    font-weight: 900;
    font-size: 3.5em;
    font-style: normal;
}

header .open {
    color: var(--primary);
}

header .close {
    color: var(--secondary);
}

header h1 {
    margin: .1em auto;
    font-weight: 900;
    font-size: 4em;
}

header h2 {
    margin: 0;
    font-size: 1.5em;
    font-weight: 300;
}

/* body */

article p {
    font-size: 1.1em;
}

/* /cv only */
.cv-page {
    width: 100%;
    max-width: 700px;
    height: auto;
    border-radius: .5em;
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
    opacity: .8;
}

.page-1, .page-2 {
    filter: initial;
    opacity: initial;
    transition: 200ms;
}

.page-1.blur, .page-2.blur {
    filter: blur(5px);
    opacity: .8;
}

.cv-page:first-of-type {
    margin-bottom: 1em;
}

#cv-text {
    text-align: left;
    position: absolute;
    left: -9999px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

#cv-text a {
    color: var(--secondary);
}

/* footer */

footer {
    margin-bottom: 4em;
    text-align: center;
}

footer ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

footer li {
    display: inline-flex;
    margin: 0;
    padding: 0;
}

footer a {
    color: var(--secondary);
    text-decoration: none;
    border-bottom: 1px solid;
    margin: .5em;
}

/* general */

div.language {
    position: absolute;
    top: 0;
    right: 0;
    text-align: right;
    font-size: .8em;
    margin-right: .5em;
}

div.language a {
    display: inline-block;
    padding: .5em;
    /*color: rgba(0, 0, 0, 0.4);*/
    color: #676F79;
    text-decoration: underline;
}

div.language a:hover {
    color: #000;
}

@media (prefers-color-scheme: dark) {
    div.language a {
        color: rgba(255, 255, 255, 0.4);
    }

    div.language a:hover {
        color: #fff;
    }
}

.custom-select {
    cursor: pointer;
    margin: .3em .15em;
    padding: 0;
    list-style: none;
    position: relative;
    display: inline-flex;
    z-index: 1;
}

.selected-option {
    padding: 10px;
    border: 1px solid var(--secondary);
    color: var(--secondary);
    border-radius: 4px;
    transition: transform 0.2s ease-in-out;
    background-color: var(--bg);
}

.selected-option ul {
    margin-top: 10px;
    margin-left: -10px;
    border: 1px solid var(--secondary);
    border-radius: 4px;
    padding: 5px 0;
    list-style: none;
    background: var(--bg);
    position: absolute;
    display: none;
}

.selected-option.primary ul {
    border: 1px solid var(--primary);
}

.selected-option.primary ul a {
    color: var(--primary);
}

.selected-option.primary ul a:hover {
    background: var(--primary);
}

.selected-option.active ul {
    display: block;
}

.selected-option ul a {
    padding: 1em;
    color: var(--secondary);
    text-align: left;
    white-space: nowrap;
    text-decoration: none;
    font-weight: inherit;
    display: block;
}

.selected-option ul a:hover {
    background: var(--secondary);
    color: var(--bg);
}

.custom-select:hover .selected-option {
    transform: scale(1.07);
}

.selected-option.primary {
    border-color: var(--primary);
    border-radius: 4px;
    color: var(--bg);
    font-weight: 400;
    background-color: var(--primary);
}

